# c-voicechat

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: sdp_exchange.h
client/src/: client.c  sdp_exchange.c
common/: CMakeLists.txt
common/src/tinycthread/: tinycthread.c
server/: CMakeLists.txt
server/include/: worker.h
server/src/: server.c  worker.c
